// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Room It correctly renders a room component 1`] = `
<div>
  <div
    class="row room-div"
  >
    <div
      class="col-md-8 room-image"
    >
      <img
        alt="room"
        class="room-image"
      />
    </div>
    <div
      class="col-md-4 room-details"
    >
      <h3
        class="room-name"
      />
      <div
        class="room-data"
      >
        <p
          class="room-description"
        >
          Room description:
          <span />
        </p>
        <p
          class="room-size"
        >
          Room size:
          <span />
        </p>
        <p
          class="room-view"
        >
          Room view:
          <span />
        </p>
        <p
          class="room-bedding"
        >
          Room bedding:
          <span />
        </p>
        <div
          class="reserve-btn"
        >
          <button
            class="fw-bold"
            type="button"
          >
            Reserve
            <span>
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M210.7 147.6c7.5-7.5 19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81.1-81.9-81.1c-7.6-7.4-7.6-19.6 0-27.2z"
                />
                <path
                  d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm32 0c0-47 18.3-91.2 51.6-124.4C164.8 98.3 209 80 256 80s91.2 18.3 124.4 51.6C413.7 164.8 432 209 432 256s-18.3 91.2-51.6 124.4C347.2 413.7 303 432 256 432s-91.2-18.3-124.4-51.6C98.3 347.2 80 303 80 256z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="back-arrow fixed-bottom"
    >
      <button
        class="btn"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`A Room It renders the Room correctly 1`] = `
<div
  className="row room-div"
>
  <div
    className="col-md-8 room-image"
  >
    <img
      alt="room"
      className="room-image"
    />
  </div>
  <div
    className="col-md-4 room-details"
  >
    <h3
      className="room-name"
    />
    <div
      className="room-data"
    >
      <p
        className="room-description"
      >
        Room description:
        <span />
      </p>
      <p
        className="room-size"
      >
        Room size:
        <span />
      </p>
      <p
        className="room-view"
      >
        Room view:
        <span />
      </p>
      <p
        className="room-bedding"
      >
        Room bedding:
        <span />
      </p>
      <div
        className="reserve-btn"
      >
        <button
          className="fw-bold"
          onClick={[Function]}
          type="button"
        >
          Reserve
          <span>
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M210.7 147.6c7.5-7.5 19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81.1-81.9-81.1c-7.6-7.4-7.6-19.6 0-27.2z"
              />
              <path
                d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm32 0c0-47 18.3-91.2 51.6-124.4C164.8 98.3 209 80 256 80s91.2 18.3 124.4 51.6C413.7 164.8 432 209 432 256s-18.3 91.2-51.6 124.4C347.2 413.7 303 432 256 432s-91.2-18.3-124.4-51.6C98.3 347.2 80 303 80 256z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="back-arrow fixed-bottom"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"
        />
      </svg>
    </button>
  </div>
</div>
`;
